# planetarion

./: .clinerules  .gitignore  README.md  colonization-mechanics-specification.md  galaxy-map-specification.md
game-server/: .gitignore  .pre-commit-config.yaml  DEPLOYMENT_TESTING_GUIDE.md  Makefile  README.md  TESTING.md  backend.pid  deploy-to-qnap-no-test.sh  deploy-to-qnap.sh  docker-compose.test.yml  docker-compose.yml  frontend.pid  pyproject.toml  pytest.ini  run-tests.sh  test_5second_ticks.py  test_demo.html  test_planets_frontend.js  update_schema.py
game-server/backend/: Dockerfile  Dockerfile.test  app.py  config.py  models.py  requirements.txt
game-server/backend/instance/: test.db-journal
game-server/backend/routes/: auth.py  fleet.py  fleet_management.py  planet_management.py  planet_user.py  planets.py  shipyard.py  static.py  users.py
game-server/backend/services/: tick.py
game-server/config/docker/: docker-compose.qnap.yml  docker-compose.test.yml
game-server/docs/: ARCHITECTURE_IMPROVEMENT_GUIDE.md  DATABASE_BACKUP_README.md  QNAP_DEPLOYMENT_README.md  TESTING_ENVIRONMENT_GUIDE.md
game-server/frontend/: package-lock.json  package.json  tailwind.config.js
game-server/frontend/playwright-report/: index.html
game-server/frontend/src/: AnimatedButton.js  App.js  Dashboard.js  FleetManagement.js  Login.js  Navigation.js  Overview.js  Register.js  ToastContext.js  index.css
game-server/frontend/test-results/: .last-run.json
game-server/scripts/: populate_test_data.py  setup-dev.sh  wait-for-services.sh
game-server/scripts/db/: backup-database.sh  restore-database.sh  setup-backup-cron.sh
game-server/scripts/deploy/: deploy-simple.sh
game-server/scripts/test/: run-tests.sh  test-qnap-connectivity-debug.sh  test-qnap-connectivity.sh
game-server/src/: __init__.py  __main__.py  config.py
game-server/src/backend/: Dockerfile  Dockerfile.test  __init__.py  app.py  config.py  models.py  requirements.prod.txt  requirements.txt
game-server/src/tests/: conftest.py
game-server/test/: README.md
game-server/tests/: conftest.py
(+192 files in other folders)
